# boolSearch

./: bool_search.py  clear_db.py  configs.py  db_loader.py  docker-compose.yml  get_terms.py  loading_files_from_wiki.py  main.py  pyproject.toml  save_in_db.py
files/: results.txt
