[tool.poetry]
name = "boolSearch"
version = "1.0"
description = ""
authors = ["gulshat <gulshat.sabitova@osinit.com>"]

[tool.poetry.dependencies]
python = "^3.9"
wikipedia = "^1.4.0"
Wikipedia-API = "^0.5.4"
nltk = "^3.7"
pymorphy2 = "^0.9.1"
SQLAlchemy = "^1.4.32"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
